v0.18.1/_sources/content/tutorials/10-vrm/index.rst.txt
:orphan:

Viscous Remanent Magnetization
==============================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module *SimPEG.electromagnetics.viscous_remanent_magnetization* to predict the ...">

.. only:: html

  .. image:: /content/tutorials/10-vrm/images/thumb/sphx_glr_plot_fwd_1_vrm_layer_thumb.png
    :alt: Response from a Homogeneous Layer for Different Waveforms

  :ref:`sphx_glr_content_tutorials_10-vrm_plot_fwd_1_vrm_layer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Response from a Homogeneous Layer for Different Waveforms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module *SimPEG.electromagnetics.viscous_remanent_magnetization* to predict the ...">

.. only:: html

  .. image:: /content/tutorials/10-vrm/images/thumb/sphx_glr_plot_fwd_2_vrm_topsoil_thumb.png
    :alt: Forward Simulation of VRM Response on a Tree Mesh

  :ref:`sphx_glr_content_tutorials_10-vrm_plot_fwd_2_vrm_topsoil.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation of VRM Response on a Tree Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the modules *SimPEG.electromagnetics.viscous_remanent_magnetization* and *SimPEG.el...">

.. only:: html

  .. image:: /content/tutorials/10-vrm/images/thumb/sphx_glr_plot_fwd_3_vrm_tem_thumb.png
    :alt: Forward Simulation Including Inductive Response

  :ref:`sphx_glr_content_tutorials_10-vrm_plot_fwd_3_vrm_tem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation Including Inductive Response</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/10-vrm/plot_fwd_1_vrm_layer
   /content/tutorials/10-vrm/plot_fwd_2_vrm_topsoil
   /content/tutorials/10-vrm/plot_fwd_3_vrm_tem


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 10-vrm_python.zip </content/tutorials/10-vrm/10-vrm_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 10-vrm_jupyter.zip </content/tutorials/10-vrm/10-vrm_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
