v0.23.0/_sources/content/tutorials/10-vrm/index.rst.txt
:orphan:

Viscous Remanent Magnetization
==============================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromagnetics.viscous_remanent_magnetization to predict the characteristic VRM response over magnetically viscous layer. We consider a small-loop, ground-based survey which uses a coincident loop geometry. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/10-vrm/images/thumb/sphx_glr_plot_fwd_1_vrm_layer_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_10-vrm_plot_fwd_1_vrm_layer.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Response from a Homogeneous Layer for Different Waveforms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromagnetics.viscous_remanent_magnetization to predict the characteristic VRM response over magnetically viscous top soil. We consider a small-loop, ground-based survey which uses a coincident loop geometry. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/10-vrm/images/thumb/sphx_glr_plot_fwd_2_vrm_topsoil_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_10-vrm_plot_fwd_2_vrm_topsoil.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation of VRM Response on a Tree Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the modules simpeg.electromagnetics.viscous_remanent_magnetization and simpeg.electromagnetics.time_domain to simulation the transient response over a conductive and magnetically viscous Earth. We consider a small-loop, ground-based survey which uses a coincident loop geometry. Earth is comprised of a conductive pipe and resistive surface layer as well as a magnetically viscous top-soil.">

.. only:: html

  .. image:: /content/tutorials/10-vrm/images/thumb/sphx_glr_plot_fwd_3_vrm_tem_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_10-vrm_plot_fwd_3_vrm_tem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Forward Simulation Including Inductive Response</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/10-vrm/plot_fwd_1_vrm_layer
   /content/tutorials/10-vrm/plot_fwd_2_vrm_topsoil
   /content/tutorials/10-vrm/plot_fwd_3_vrm_tem


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 10-vrm_python.zip </content/tutorials/10-vrm/10-vrm_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 10-vrm_jupyter.zip </content/tutorials/10-vrm/10-vrm_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
